...

	// MARK: - Methods
	override public func viewDidLoad() {
		super.viewDidLoad()
		// Do any additional setup after loading the view, typically from a nib.

		self.title = "Change Time"
		self.view.backgroundColor = UIColor(red: 255 / 255, green: 128 / 255, blue: 0, alpha: 1)

		setupTimeArray()
		setupTables()
		setupDetailView()
		setupBottomDetail()
...
		// Dispose of any resources that can be recreated.
	}

	// MARK: Setup
	public func setupNavigationBar() {

		let saveButton = UIBarButtonItem(title: "Save", style: .Plain, target: self, action: #selector(butSave))
		saveButton.tintColor = .redColor()

		let cancelButton = UIBarButtonItem(title: "Cancel", style: .Plain, target: self, action: #selector(butCancel))
		cancelButton.tintColor = .redColor()

		self.navigationItem.rightBarButtonItem = saveButton
...
